--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Rotating Counters for Nodejs",
   "keywords": [ "javascript", "language", "mochiscript", "counter", "stats" ],
   "author": "Jeff Su",
-  "version": "0.1.0-pre11",
+  "version": "0.2.0",
   "licenses": [ { "type": "MIT" }],
   "engines": { "node": ">=0.4.0" },
   "directories": { "lib": "./lib/tempo" },
@@ -12,6 +12,11 @@
   "dependencies": { 
     "mochiscript": ">=0.6.13"
   },
+
+  "devDependencies": {
+    "cli-table": ">=0.0.2"
+  },
+
   "repository": {
     "type": "git",
     "url": "git://github.com/jeffsu/tempo.git"
