--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "description": "Rotating Counters for Nodejs",
   "keywords": [ "javascript", "language", "mochiscript", "counter", "stats" ],
   "author": "Jeff Su",
-  "version": "0.2.0",
+  "version": "0.2.0-pre2",
   "licenses": [ { "type": "MIT" }],
   "engines": { "node": ">=0.4.0" },
   "directories": { "lib": "./lib/tempo" },
   "main" : "./lib/tempo/index",
   "bin": {},
   "scripts": {
-    "test": "whiskey 'tests/increment.js tests/syncer.js tests/functional.js'"
+    "test": "whiskey 'tests/increment.js tests/syncer.js tests/functional.js tests/iterators.js'"
   },
 
   "dependencies": { 
-    "mochiscript": ">=0.6.14"
+    "mochiscript": ">=0.6.15"
   },
 
   "devDependencies": {
