--- a/package.json
+++ b/package.json
@@ -3,19 +3,13 @@
   "description": "Rotating Counters for Nodejs",
   "keywords": [ "javascript", "language", "mochiscript", "counter", "stats" ],
   "author": "Jeff Su",
-<<<<<<< HEAD
   "version": "0.2.0",
-  "scripts": {
-     
-  },
-=======
-  "version": "0.2.0-pre2",
->>>>>>> aa2f3b4d83d9598dbbc711f22bf68fab43000b5a
   "licenses": [ { "type": "MIT" }],
   "engines": { "node": ">=0.4.0" },
   "directories": { "lib": "./lib/tempo" },
-  "main" : "./lib/tempo/index",
+  "main" : "./index.js",
   "bin": {},
+
   "scripts": {
     "test": "whiskey 'tests/increment.js tests/syncer.js tests/functional.js tests/iterators.js'"
   },
